# TruthLinker

./: .flake8  Makefile  README.md  pyproject.toml
truthlinker/: constants.py  setup_script.py  utils.py
