[tool.poetry]
name = "truthlinker"
version = "0.1.0"
description = "Research project for the cross-lingual facts linking in Wikipedia"
authors = ["Mykola Trokhymovych <trokhymovych.mykola@gmail.com>"]
readme = "README.md"
packages = [{include = "truthlinker"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"


[tool.poetry.group.test.dependencies]
pytest = "^6.2.2"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.11.1"
pytest-env = "^0.6.2"
pytest-mock = "^3.5.1"

[tool.isort]
profile = "black"
lines_after_imports = 2
lines_between_types = 1
combine_as_imports = true

[tool.black]
line-length = 120
target-version = ['py39']

[tool.mypy]
disallow_untyped_defs = true
files = "tests/**/*.py,truthlinker/**/*.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider" # deactivating pytest caching.

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
